Adding navigation bar

--- a/content/trees/collections/paris/pages.yaml
+++ b/content/trees/collections/paris/pages.yaml
@@ -3,3 +3,20 @@ tree:
     entry: 18aa198a-c0af-4234-94e1-986fa94487d7
   -
     entry: 3233956c-1241-4df4-84a1-280239d99df6
+    children:
+      -
+        entry: 4917e651-0798-4b36-b581-6045f8a5d901
+      -
+        entry: 0bed1d71-8f00-4e6c-977e-5bd43a242fdf
+  -
+    entry: ffd1f64b-fb71-4f39-a52d-c97cbb392996
+    children:
+      -
+        entry: ac1b609d-bf6f-4efd-a4ba-22c1a77f1a16
+      -
+        entry: 456f899a-71ee-4211-a837-2174a8043fa2
+  -
+    entry: 14bcc2b0-aeb4-4eb8-8936-62eaba770f0f
+    children:
+      -
+        entry: 0b91ee6f-c3ab-45f1-b36b-37b576b32e0c
