--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,8 @@ STATAMIC_REVISIONS_ENABLED=false
 STATAMIC_GRAPHQL_ENABLED=false
 STATAMIC_API_ENABLED=false
 STATAMIC_GIT_ENABLED=false
+
+OPENAI_API_KEY= # Link to generate a new API Key https://platform.openai.com/api-keys
+OPENAI_ORGANIZATION= # Link to create a new organization https://platform.openai.com/settings/organization/general
+OPENAI_REQUEST_TIMEOUT=30
+OPENAI_MODEL=gpt-3.5-turbo
