--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "php": "^8.3",
         "laravel/framework": "^11",
         "laravel/tinker": "^2.9",
-        "statamic/cms": "^5.0"
+        "openai-php/laravel": "^0.10.1",
+        "statamic/cms": "^5.0",
+        "symfony/http-client": "^7.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8.1",
