--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.9",
         "autoprefixer": "^10.4.14",
+        "flowbite": "^2.3.0",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.4.3",
-        "vite": "^4.0.0",
-        "flowbite": "^2.3.0"
+        "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "axios": "^1.7.2",
+        "toastr": "^2.1.4"
     }
 }
